--- a/package.json
+++ b/package.json
@@ -37,7 +37,7 @@
         "@radix-ui/react-radio-group": "^1.2.3",
         "@radix-ui/react-select": "^2.1.6",
         "@radix-ui/react-separator": "^1.1.2",
-        "@radix-ui/react-slot": "^1.1.2",
+        "@radix-ui/react-slot": "^1.2.3",
         "@radix-ui/react-switch": "^1.2.5",
         "@radix-ui/react-tabs": "^1.1.11",
         "@radix-ui/react-toggle": "^1.1.2",
@@ -66,6 +66,7 @@
         "motion": "^12.5.0",
         "next-themes": "^0.4.4",
         "react": "^19.0.0",
+        "react-aria-components": "^1.10.1",
         "react-dom": "^19.0.0",
         "react-dropzone": "^14.3.8",
         "react-quill-new": "^3.4.6",
