--- a/composer.json
+++ b/composer.json
@@ -27,8 +27,10 @@
         "laravel/sail": "^1.41",
         "mockery/mockery": "^1.6",
         "nunomaduro/collision": "^8.6",
+        "nunomaduro/larastan": "^3.3",
         "pestphp/pest": "^3.7",
-        "pestphp/pest-plugin-laravel": "^3.1"
+        "pestphp/pest-plugin-laravel": "^3.1",
+        "phpstan/phpstan": "^2.1"
     },
     "autoload": {
         "psr-4": {
