--- a/package.json
+++ b/package.json
@@ -57,6 +57,7 @@
         "concurrently": "^9.0.1",
         "date-fns": "^4.1.0",
         "framer-motion": "^12.11.3",
+        "frimousse": "^0.2.0",
         "globals": "^15.14.0",
         "jspdf": "^3.0.1",
         "jspdf-autotable": "^5.0.2",
