--- a/package.json
+++ b/package.json
@@ -56,6 +56,7 @@
         "clsx": "^2.1.1",
         "concurrently": "^9.0.1",
         "date-fns": "^4.1.0",
+        "embla-carousel-autoplay": "^8.6.0",
         "embla-carousel-react": "^8.6.0",
         "framer-motion": "^12.11.3",
         "frimousse": "^0.2.0",
